--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
+    "build": "tailwindcss build src/styles.css -o public/output.css",
     "dev": "npx tailwindcss -i ./static/src/input.css -o ./static/src/styles.css --watch"
-   },
+  },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
